# bootstrap-scheme

./: CMakeLists.txt  Environment.cpp  Environment.h  Object.cpp  Object.h  ObjectCreator.cpp  ObjectCreator.h  README  README.md  Reader.cpp  Reader.h  Scheme.cpp  Scheme.h  SchemeObject.cpp  SchemeObject.h  SchemeObjectCreator.cpp  SchemeObjectCreator.h  SchemeObjectTest.cpp  TODO  main.cpp  scheme.cpp  scheme_v.04.cpp
include/: Environment.h  InputOutput.h  Reader.h  Scheme.h  SchemeEnvironment.h  SchemeEvaluator.h  SchemeGarbageCollector.h  SchemeObject.h  SchemeObjectCreator.h  SchemeVector.h  SchemeWriter.h
include/Procedures/: EnvironmentProcedures.h  SchemeCompoundProcedure.h  SchemePrimProcedure.h  StringProcedures.h  TypeConversions.h  VectorProcedures.h
src/: Environment.cpp  EnvironmentProcedures.cpp  InputOutput.cpp  Reader.cpp  Scheme.cpp  SchemeEvaluator.cpp  SchemeGarbageCollector.cpp  SchemeObject.cpp  SchemeObjectCreator.cpp  SchemePrimProcedure.cpp  SchemeWriter.cpp  StringProcedures.cpp  TypeConversions.cpp  VectorProcedures.cpp  main.cpp
src/scm/: primes.scm  standardlibrary.scm
